# xagent-p

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  workspace.toml
.claude/skills/: design-doc  mementum-memory  pr-desc
.docker-build-test/: pyproject.toml
.docker-build-test/.docker-build-test/components/xagent/agent_app/: model.py
.docker-build-test/.docker-build-test/components/xagent/board/: clear_rows.py
.docker-build-test/.docker-build-test/components/xagent/langchain_agents/: __init__.py
.docker-build-test/.docker-build-test/components/xagent/piece/: shape.py
.docker-build-test/bases/xagent/api_http/: app.py  main.py
.docker-build-test/components/xagent/agent_app/: __init__.py
.docker-build-test/components/xagent/board/: __init__.py  core.py
.docker-build-test/components/xagent/langchain_agents/: corpus.py  planner.py  subagents.py
.docker-build-test/components/xagent/piece/: __init__.py
.github/workflows/: ci.yml
bases/xagent/agent_flow_cli/: __init__.py  main.py
bases/xagent/api_http/: DEMO_UI_DESIGN.md  app.py  main.py  routes_agent_flow.py
bases/xagent/demo_ui/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
bases/xagent/langchain_cli/: main.py
bases/xagent/llm_cli/: __init__.py  main.py
changelogs/: 20250509-llm-api-layer-changes.md  20250509-llm-api-layer-design.txt  20250510-project-memory-for-coding-agents-design.md  20260511-project-memory-for-coding-agents-changes.md  20260512-coding-agent-prompts-changes.md  20260512-mementum-memory-skill-changes.md  prompt.txt
components/xagent/: config.py  runtime_config.py
components/xagent/agent_flow/: __init__.py  config.py  errors.py  evaluation.py  llm_adapter.py  messages.py  models.py  planner.py  replay.py  runtime.py  service.py  state_projection.py  step_runner.py  steps.py  subagents.py  summary.py  tool_registry.py  tools.py  workflow.py
components/xagent/agent_persistence/: __init__.py  memory.py  repositories.py
components/xagent/board/: __init__.py  clear_rows.py  core.py
components/xagent/config/: __init__.py  loader.py  runtime.py  strict.py
components/xagent/langchain_agents/: app.py  merge.py  planner.py  subagents.py
components/xagent/llm_batch/: __init__.py  concurrent.py  models.py  polling.py
components/xagent/llm_config/: __init__.py  auth.py  settings.py
components/xagent/llm_contracts/: __init__.py  capabilities.py  errors.py  types.py  usage.py
components/xagent/llm_files/: __init__.py  models.py  upload.py
components/xagent/llm_provider_anthropic/: __init__.py  batch.py  files.py  mapping.py  provider.py
components/xagent/llm_provider_openai/: __init__.py  batch.py  embeddings.py  files.py  (+2 more)
deploy/langchain-service/: Chart.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml  values-dev.yaml  values-kind.yaml  values-prod.yaml  values.yaml
development/config/: agent-flow.local.yaml  api-http.dev.yaml
development/notebooks/: README.md  test-llm-apis.ipynb
mementum/: README.md  state.md
mementum/drafts/: README.md  agentic-memory-system-design.md  memory-design-notes.txt
mementum/knowledge/: README.md  agent-runtime-framework-design.md  architecture-decisions.md  closed-loop-agent-eval-config-improvement-system-design.md  codebase-map.md  demo-ui-design.md  development-workflows.md  highly-configurable-agentic-app-implementation-design.md  implementation-invariants.md  open-questions.md  project-memory-policy.md  replay-resume-agent-implementation-plan.md  replay-resume-agent-system-design.md  security-and-data-boundaries.md  testing-and-evaluation.md
mementum/memories/: README.md  agent-flow-execution-policy-inherits-through-step-tree.md  agent-flow-executor-selection-follows-model-config.md  agent-flow-llm-adapter-stays-thin.md  agent-flow-resume-reconciles-succeeded-steps.md  agent-flow-wait-and-message-steps-are-separate.md  api-key-fields-use-secretstr.md  case-domain-records-are-immutable-and-linked.md  do-not-store-runtime-data-in-project-memory.md  live-provider-tests-are-opt-in.md  preserve-loose-polylith-boundaries.md  project-memory-is-engineering-context.md  provider-mutations-are-not-auto-retried.md  reusable-prompts-live-outside-project-memory.md  runtime-config-env-overrides-files.md  runtime-config-explicit-env-metadata-only.md  update-memory-when-lessons-become-durable.md
mementum/templates/: decision.md  knowledge.md  memory.md
projects/langchain_service/: Dockerfile  README.md
prompts/: README.md
prompts/agent_flow/: planner.md  summary.md
prompts/maintenance/: prune-stale-memory.md  refresh-codebase-map.md  refresh-project-memory.md  refresh-project-state.md  synthesize-memories.md  update-project-memory.md
prompts/reviews/: compare-branches.md  review-current-branch.md  review-pr-risk.md  security-review.md  test-coverage-review.md
prompts/templates/: prompt-template.md
prompts/workflows/: fix-bug.md  generate-changelog.md  implement-feature.md  orient-repo.md  refactor-code.md
scripts/: test-kind-langchain-service.sh
skills/design-doc/: SKILL.md
skills/mementum-memory/: SKILL.md
skills/pr-desc/: SKILL.md
test/integration/: test_anthropic_live.py  test_openai_live.py
(+119 files in other folders)
