[project]
name = "xagent-p"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "httpx",
    "jsonschema>=4.26.0",
    "langchain",
    "langchain-openai",
    "pydantic",
    "pyyaml",
    "uvicorn",
]

[project.scripts]
xagent-langchain-api = "xagent.api_http.main:main"
xagent-langchain-sample = "xagent.langchain_cli.main:main"
xagent-llm = "xagent.llm_cli.main:main"

[dependency-groups]
dev = [
    "polylith-cli>=1.43.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]
exclude = [
    ".git",
    ".idea",
    ".pytest_cache",
    ".uv-cache",
    ".venv",
    ".docker-build-test",
    "__pycache__",
    "*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["components/xagent", "bases/xagent"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyproject.toml",
    "/README.md",
    "/components",
    "/bases",
    "/development",
]
exclude = [
    "/.git",
    "/.idea",
    "/.pytest_cache",
    "/.uv-cache",
    "/.venv",
    "/.docker-build-test",
    "/**/__pycache__",
    "/**/*.pyc",
]

[tool.uv.build-backend]
namespace = true
module-name = "xagent"
module-root = ""

[tool.pytest.ini_options]
markers = [
    "require_env: tests that require real provider credentials or external services",
]
