[project]
name = "xagent-p"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "httpx",
    "jsonschema>=4.26.0",
    "langchain",
    "langchain-openai",
    "pydantic",
    "pyyaml",
    "uvicorn",
]

[project.scripts]
xagent-langchain-api = "xagent.api_http.main:main"
xagent-langchain-sample = "xagent.langchain_cli.main:main"
xagent-llm = "xagent.llm_cli.main:main"
xagent-agent-flow = "xagent.agent_flow_cli.main:main"

[dependency-groups]
dev = [
    "jupyterlab>=4.5.7",
    "mypy>=2.1.0",
    "polylith-cli>=1.43.0",
    "pytest>=9.0.2",
    "ruff>=0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]
exclude = [
    ".git",
    ".idea",
    ".pytest_cache",
    ".uv-cache",
    ".venv",
    ".docker-build-test",
    "__pycache__",
    "*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["components/xagent", "bases/xagent"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyproject.toml",
    "/README.md",
    "/components",
    "/bases",
    "/development",
]
exclude = [
    "/.git",
    "/.idea",
    "/.pytest_cache",
    "/.uv-cache",
    "/.venv",
    "/.docker-build-test",
    "/**/__pycache__",
    "/**/*.pyc",
]

[tool.uv.build-backend]
namespace = true
module-name = "xagent"
module-root = ""

[tool.ruff]
target-version = "py314"
src = ["components", "bases", "test"]
exclude = [".docker-build-test"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "SIM",      # flake8-simplify
    "RUF",      # ruff-native rules
]
ignore = [
    "E501",     # line length — handled by formatter
    "UP046",    # PEP 695 generic class syntax — deferred refactor
    "UP047",    # PEP 695 generic function syntax — deferred refactor
]

[tool.ruff.lint.per-file-ignores]
"components/xagent/piece/core.py" = ["E741"]  # I/O/Z are intentional Tetris piece names

[tool.ruff.format]

[tool.mypy]
python_version = "3.14"
namespace_packages = true
explicit_package_bases = true
mypy_path = "components:bases"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-m 'not require_env'"
markers = [
    "require_env: tests that require real provider credentials or external services",
]
