[project]
name = "xagent-p"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "langchain",
    "langchain-openai",
    "pydantic",
    "uvicorn",
]

[project.scripts]
xagent-langchain-api = "xagent.api_http.main:main"
xagent-langchain-sample = "xagent.langchain_cli.main:main"

[dependency-groups]
dev = [
    "polylith-cli>=1.43.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.uv.build-backend]
namespace = true
module-name = "xagent"
module-root = ""
